Udpdate to new config

--- a/NORM0006_1280x720_30FPS/config.json
+++ b/NORM0006_1280x720_30FPS/config.json
@@ -4,16 +4,17 @@
 	"Height": 720,
 	"Width": 1280,
 	"InputPrefix": "%06d.png",
-	"Clean_train": "clean_train",
-	"Clean_test": "clean_test",
-	"Gt_train": "gt_train",
-	"Gt_test": "gt_test",
-	"Clean": "clean",
-	"Gt": "gt",
+	"DirectoryCleanTrain": "clean_train",
+	"DirectoryCleanTest": "clean_test",
+	"DirectoryGtTrain": "gt_train",
+	"DirectoryGtTest": "gt_test",
+	"DirectoryClean": "clean",
+	"DirectoryGt": "gt",
 	"InitializationFrames": 50,
 	"StartTrain": 1,
 	"StopTrain": 600,
-	"StartTest": 1,
-	"StopTest": 300,
+	"StartTest": 601,
+	"StopTest": 900,
+	"AllFrames": 920,
 	"Resize": false
 }
